# snr

./: .editorconfig  .gitignore  .pylintrc  .readthedocs.yaml  CHANGELOG  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  setup.cfg  sonar-project.properties
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  codeql.yml  docker-build.yml  lint.yml  metrics.yml  pypi-publish.yml  type-check.yml
docs/source/: conf.py  fdl.rst  index.rst
docs/source/dev_guide/: release_checklist.rst
docs/source/dev_guide/command_development/: develop_your_own.rst  highlighting.rst
docs/source/dev_guide/payload_development/: basics.rst  contributing_a_payload.rst  develop_your_own.rst  partition_types.rst  payload_class.rst  payload_types.rst  rootfs_versions.rst  terminology.rst  validation.rst  working_example.rst
docs/source/user_guide/: configuration.rst  deeper_introduction.rst  faq.rst  installation.rst  payload_categories.rst  protection.rst  quickstart.rst  shell_commands.rst
scripts/: dev_snr.py
snr/: __init__.py  __main__.py  atexit_callbacks.py  command_utils.py  init.py  main.py  variables.py  version.py
snr/cli/: __init__.py  atexit_callbacks.py  gen.py  init.py  interactive_shell.py  lexer.py  main.py  tips.py  variables.py
snr/cli/commands/: __init__.py  filesystem.py  misc.py  payload.py  variable.py
snr/commands/: __init__.py  filesystem.py  misc.py  payload.py  variable.py
snr/core/: __init__.py
snr/core/core/: __init__.py  arch.py  common_paths.py  console.py  context.py  logging.py  options.py  path_wrapper.py  variable_manager.py
snr/core/payload/: __init__.py  context.py  data_dir.py  entry_point.py  nt_registry.py  payload.py  safety_pin.py  storage.py  unix_group.py  unix_gshadow.py  unix_passwd.py  unix_shadow.py
snr/core/payload_generation/: __init__.py  common.py  generation.py
snr/core/payload_generation/post/: __init__.py  core_configuration.py  finishing.py  grub_installation.py
snr/core/payload_generation/pre/: __init__.py  ensuring_dependencies.py  formatting.py  host_check.py  partitioning.py  rootfs_preparation.py
snr/core/util/: __init__.py  at_formatter.py  chroot_program_wrapper.py  chroot_programs.py  common_utils.py  download.py  network_interfaces.py  program_wrapper.py  programs.py
snr/core/util/payloads/: __init__.py  autorun.py  install_snr_core.py  systemd_networkd.py  systemd_service.py  systemd_target.py  systemd_unit.py
snr/payloads/access/: __init__.py
snr/payloads/access/bypass_login/: __init__.py  payload.py
snr/payloads/access/ssh_server/: __init__.py
snr/payloads/extraction/: __init__.py
snr/payloads/extraction/account_hashes/: __init__.py  payload.py
snr/payloads/extraction/files/: __init__.py  payload.py
snr/payloads/infection/: __init__.py
snr/payloads/infection/custom/: __init__.py  payload.py
snr/payloads/infection/meterpreter/: __init__.py  payload.py
snr/payloads/misc/: __init__.py
snr/payloads/misc/multi/: __init__.py
snr/payloads/misc/pirate_flag/: __init__.py  payload.py
snr/payloads/misc/run_command/: __init__.py
snr/payloads/misc/run_executable/: __init__.py
snr/payloads/misc/shell/: __init__.py
snr/payloads/tampering/: __init__.py
snr/payloads/tampering/disk_encryption/: Makefile  __init__.py  payload.py
snr/payloads/tampering/disk_encryption/src/: bios_disk_encryption_message.mk  bios_disk_encryption_message.nasm  efi_disk_encryption_message.c  efi_disk_encryption_message.mk
snr/payloads/tampering/files/: __init__.py  payload.py
snr/payloads/tampering/registry/: __init__.py  payload.py
snr/payloads/tampering/user_management/: __init__.py  payload.py
snr/payloads/tampering/wipe_disks/: __init__.py  payload.py
tests/: __init__.py  test_core_core_context.py  test_core_core_path_wrapper.py  test_core_core_variable_manager.py  test_core_payloads_context.py  test_core_payloads_data_dir.py  test_core_payloads_entry_point.py  test_core_payloads_nt_registry.py  test_core_payloads_payload.py  test_core_payloads_safety_pin.py  test_core_payloads_storage.py  test_core_payloads_unix_group.py  test_core_payloads_unix_gshadow.py  test_core_payloads_unix_passwd.py  test_core_payloads_unix_shadow.py
tests/mocks/: __init__.py
tests/mocks/cli/: variables.py
tests/mocks/core/core/: mock_logging.py  mock_path_wrapper.py
tests/mocks/core/payload/: mock_context.py  mock_data_dir.py  mock_safety_pin.py  mock_storage.py
tests/mocks/core/util/: mock_common_utils.py  mock_program_wrapper.py  mock_programs.py
tests/mocks/core/util/payloads/: autorun.py
tests/mocks/hivex/: __init__.py  hive_types.py
tests/mocks/psutil/: __init__.py
tests/mocks/stdlib/: mock_builtins.py  mock_os.py  mock_os_path.py  mock_shutil.py  mock_tempfile.py  mock_time.py
tools/: build_payloads.sh  bypass_init.sh  docker_build.py  docker_run.py  docs_build.py  docs_clean.py  docs_rebuild.py  get_beta.sh  get_stable.sh
