[tool.poetry]
name = "snr"
version = "1.6.0+git"
description = "Create bootable payloads easily"
authors = ["Kamyar <139503563+GlobularOne@users.noreply.github.com>"]
license = "gpl-3.0"
readme = "README.md"
homepage = "https://github.com/GlobularOne/snr"
repository = "https://github.com/GlobularOne/snr"
documentation = "https://snr.readthedocs.io/en/latest/"

[tool.poetry.scripts]
snr = "snr.cli.main:main"
snrgen = "snr.cli.gen:main"
docker-build = "tools.docker_build:main"
docker-run = "tools.docker_build:main"
docs-build = "tools.docs_build:main"
docs-clean = "tools.docs_clean:main"
docs-rebuild = "tools.docs_rebuild:main"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.2.1"
deprecated = "^1.2.18"
prompt-toolkit = "^3.0.52"
pyfiglet = "^1.0.4"
pygments = "^2.19.2"
requests = "^2.32.5"
rich = "^14.1.0"
setuptools = "^80.9.0"
psutil = "^7.0.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.2"
impacket = "^0.12.0"
isort = "^6.0.1"
mypy = "^1.17.0"
pdbpp = "^0.11.7"
pycryptodome = "^3.23.0"
pylint = "^3.3.8"
radon = "^6.0.1"
types-requests = "^2.32.4"
types-setuptools = "^80.9.0"
types-tabulate = "^0.9.0"
types-deprecated = "^1.2.15"
pytest = "^8.4.1"
pytest-mock = "^3.14.1"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.main]
ignore-paths = ["snr/payloads"]
source-roots = ["snr"]
disable = ["too-many-arguments"]

[tool.pylint.messages_control]
max-line-length = 120

[tool.mypy]
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["snr.core"]
