[metadata]
name = snr
version = attr: snr.version.__version__
url = https://github.com/GlobularOne/snr
author = Kamyar Hatamnezhad (GlobularOne)
author_email = GlobularOne@proton.me
description = Generate bootable payloads easily - Terminal Interface
long_description = file: README.md
license = Apache-2.0
license_files =
    LICENSE

[options]
packages = find:
python_requires = >=3.10
install_requires =
    pyfiglet
    requests
    libsnr

[options.entry_points]
console_scripts =
    snr = snr.main:main
